--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "@tailwindcss/vite": "^4.1.10",
     "astro": "^5.13.3",
     "astro-icon": "^1.1.5",
+    "chart.js": "^4.5.0",
     "ky": "^1.8.1",
     "nanostores": "^1.0.1",
     "tailwindcss": "^4.1.10"
