--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "client:dev": "npm run dev --workspace=client",
+    "server:dev": "npm run dev --workspace=server"
   },
   "workspaces": ["apps/*"],
   "keywords": [],
